# ultraprompt

./: LICENSE  README.md  pyproject.toml
src/ultraprompt/core/: __init__.py  sam_yolo_annotation.py
src/ultraprompt/gui/: __init__.py  app.py  yolo_training_tab.py
