[build-system]
requires = ["hatchling>=1.24"]
[tool.hatch.metadata]
allow-direct-references = true

build-backend = "hatchling.build"

[project]
name = "ultraprompt"
version = "0.1.0"
description = "Prompt-guided instance segmentation (SAM2→YOLO) with a clean GUI."
readme = "README.md"
requires-python = "~=3.11.13"
authors = [{name="Sumner B. Harris, Anamika Sen"}]
license = {text = "MIT"}
keywords = ["segmentation", "SAM2", "YOLO", "annotation", "Ultralytics"]

dependencies = [
  "ultralytics>=8.4.9",
  "torch>=2.10.0",               # CPU by default; use CUDA index for GPU
  "torchvision>=0.25.0",        # keep paired with your torch version
  "PySide6>=6.10.1",
  "numpy>=2.4.0",
  "timm>=1.0.24",
  "hf-xet>=1.2.0",
  "safetensors>=0.7.0",
  "huggingface-hub>=1.3.5",
  "tqdm>=4.67.1",
]

[project.optional-dependencies]
# Your optional Jupyter tools
extras = ["clip @ git+https://github.com/ultralytics/CLIP.git@643beff3883b5720d94b6b9c9eca12fa9fb72fb1"]
notebook = [
  "notebook>=7.0.0",
  "ipykernel>=6.25.0",
  # "jupyterlab>=4.0.0",  # include if you prefer Lab
]
dev = ["pytest", "pytest-cov", "ruff", "mypy", "ipython"]

[project.scripts]
ultraprompt-gui = "ultraprompt.gui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ultraprompt"]
